handle multiple domains from SIMILAR_TO relations as well as find list of resources